--- a/backend/package.json
+++ b/backend/package.json
@@ -19,8 +19,8 @@
     "helmet": "^3.15.0",
     "jsonwebtoken": "8.3.0",
     "moment": "^2.22.2",
-    "nodemon": "1.18.4",
-    "npm-run-all": "^4.1.3",
+    "nodemon": "^1.18.7",
+    "npm-run-all": "^4.1.5",
     "prisma": "^1.21.0",
     "prisma-binding": "2.1.6"
   },
