--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,8 @@
     "nodemon": "^1.18.7",
     "npm-run-all": "^4.1.5",
     "prisma": "^1.21.0",
-    "prisma-binding": "2.1.6"
+    "prisma-binding": "2.1.6",
+    "qs": "^6.6.0"
   },
   "babel": {
     "presets": [
