--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "fiveaside-backed",
   "description": "Manifesto five a side",
   "scripts": {
-    "start": "nodemon -e js,graphql -x node src/index.js",
+    "start": "node src/index.js",
     "dev": "nodemon -e js,graphql -x node --inspect src/index.js",
     "test": "jest",
-    "deploy": "prisma deploy --env-file variables.env"
+    "deploy": "prisma deploy --env-file variables.env",
+    "heroku-postbuild": "cd frontend && npm install && npm run build"
   },
   "dependencies": {
     "@slack/client": "^4.8.0",
