--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,7 @@
     "start": "node src/index.js",
     "dev": "nodemon -e js,graphql -x node --inspect src/index.js",
     "test": "jest",
-    "deploy": "prisma deploy --env-file variables.env",
-    "heroku-postbuild": "cd frontend && npm install && npm run build"
+    "deploy": "prisma deploy --env-file variables.env"
   },
   "dependencies": {
     "@slack/client": "^4.8.0",
