--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fiveaside-backend",
   "description": "Manifesto five a side",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "nodemon -e js,graphql -x node src/index.js",
     "dev": "nodemon -e js,graphql -x node --inspect src/index.js",
     "test": "jest",
     "deploy": "prisma deploy --env-file variables.env"
