--- a/rest-api/package.json
+++ b/rest-api/package.json
@@ -2,8 +2,8 @@
   "name": "fiveaside-backend",
   "description": "Manifesto five a side",
   "scripts": {
-    "start": "nodemon -e js,graphql -x node src/index.js",
-    "dev": "nodemon -e js,graphql -x node --inspect src/index.js",
+    "start": "nodemon -e js,graphql -x node slack/index.js ",
+    "dev": "nodemon -e js,graphql -x node --inspect=5858 slack/index.js",
     "test": "jest",
     "deploy": "prisma deploy --env-file variables.env"
   },
@@ -11,18 +11,14 @@
     "@slack/client": "^4.8.0",
     "babel-preset-env": "^1.7.0",
     "bcryptjs": "2.4.3",
-    "cookie-parser": "^1.4.3",
+    "body-parser": "^1.18.3",
     "dotenv": "6.0.0",
-    "graphql": "^0.13.2",
-    "graphql-cli": "^2.16.7",
-    "graphql-yoga": "1.16.2",
+    "graphql-request": "^1.8.2",
     "helmet": "^3.15.0",
     "jsonwebtoken": "8.3.0",
     "moment": "^2.22.2",
     "nodemon": "^1.18.7",
     "npm-run-all": "^4.1.5",
-    "prisma": "^1.21.0",
-    "prisma-binding": "2.1.6",
     "qs": "^6.6.0"
   },
   "babel": {
