--- a/rest-api/package.json
+++ b/rest-api/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "2.4.3",
     "body-parser": "^1.18.3",
     "dotenv": "6.0.0",
+    "express": "^4.16.4",
     "graphql-request": "^1.8.2",
     "helmet": "^3.15.0",
     "jsonwebtoken": "8.3.0",
