--- a/rest-api/package.json
+++ b/rest-api/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@slack/client": "^4.8.0",
+    "axios": "^0.18.0",
     "babel-preset-env": "^1.7.0",
     "bcryptjs": "2.4.3",
     "body-parser": "^1.18.3",
