--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "react-adopt": "^0.6.0",
     "react-apollo": "^2.2.4",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.5",
     "react-select": "^2.1.1",
     "styled-components": "^4.1.1"
   },
@@ -35,5 +35,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "react-to-print": "^2.0.0-alpha-6"
+  }
 }
