start converting rest api to typescript

--- a/rest-api/package.json
+++ b/rest-api/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "start": "nodemon -e js,graphql -x node slack/index.js ",
     "dev": "nodemon -e js,graphql -x node --inspect=5858 slack/index.js",
+    "prod": "tsc && node ./dist/index.js",
     "test": "jest",
     "deploy": "prisma deploy --env-file variables.env"
   },
@@ -27,5 +28,11 @@
     "presets": [
       "env"
     ]
+  },
+  "devDependencies": {
+    "@types/express": "^4.16.1",
+    "awesome-typescript-loader": "^5.2.1",
+    "source-map-loader": "^0.2.4",
+    "typescript": "^3.3.3"
   }
 }
