--- a/rest-api/package.json
+++ b/rest-api/package.json
@@ -6,7 +6,8 @@
     "dev": "nodemon -e js,graphql -x node --inspect=5858 slack/index.js",
     "prod": "tsc && node ./dist/index.js",
     "test": "jest",
-    "deploy": "prisma deploy --env-file variables.env"
+    "deploy": "prisma deploy --env-file variables.env",
+    "heroku-postbuild": "tsc && node ./dist/index.js"
   },
   "dependencies": {
     "@slack/client": "^4.8.0",
