--- a/rest-api/package.json
+++ b/rest-api/package.json
@@ -2,12 +2,12 @@
   "name": "fiveaside-backend",
   "description": "Manifesto five a side",
   "scripts": {
-    "start": "nodemon -e js,graphql -x node slack/index.js ",
+    "start": "nodemon -e js,graphql -x node ./dist/index.js ",
     "dev": "nodemon -e js,graphql -x node --inspect=5858 slack/index.js",
     "prod": "tsc && node ./dist/index.js",
     "test": "jest",
     "deploy": "prisma deploy --env-file variables.env",
-    "heroku-postbuild": "tsc && node ./dist/index.js"
+    "heroku-postbuild": "tsc"
   },
   "dependencies": {
     "@slack/client": "^4.8.0",
