--- a/graphql/package.json
+++ b/graphql/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@slack/client": "^4.8.0",
+    "@types/cookie-parser": "^1.4.1",
+    "@types/jsonwebtoken": "^8.3.0",
     "axios": "^0.18.0",
     "babel-preset-env": "^1.7.0",
     "bcryptjs": "2.4.3",
@@ -23,7 +25,7 @@
     "moment": "^2.22.2",
     "nodemon": "^1.18.7",
     "npm-run-all": "^4.1.5",
-    "prisma": "^1.24.0",
+    "prisma": "^1.27.4",
     "prisma-binding": "2.1.6",
     "qs": "^6.6.0"
   },
