--- a/rest-api/package.json
+++ b/rest-api/package.json
@@ -3,7 +3,7 @@
   "description": "Manifesto five a side",
   "scripts": {
     "start": "nodemon -e js,graphql -x node ./dist/index.js ",
-    "dev": "nodemon -e js,graphql -x node --inspect=5858 slack/index.js",
+    "dev": "nodemon",
     "prod": "tsc && node ./dist/index.js",
     "test": "jest",
     "deploy": "prisma deploy --env-file variables.env",
@@ -21,9 +21,11 @@
     "helmet": "^3.15.0",
     "jsonwebtoken": "8.3.0",
     "moment": "^2.22.2",
+    "node-schedule": "^1.3.2",
     "nodemon": "^1.18.7",
     "npm-run-all": "^4.1.5",
-    "qs": "^6.6.0"
+    "qs": "^6.6.0",
+    "ts-node": "^8.0.2"
   },
   "babel": {
     "presets": [
